--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 				</nav>
 				<section>
 					<div class="wrapper">
+						<!-- LEFT OF THE WRAPPER -->
 						<div class="left">
 							<div class="title">
 								<h1>Are you starving?</h1>
@@ -49,18 +50,28 @@
 							</div>
 							<div class="order-card">
 								<div class="top">
-									<a href="#" class="top-btn delivery">Delivery</a>
-									<a href="#" class="top-btn pickup">Pickup</a>
+									<div class="left">
+										<img src="./assets/hero/bike.svg" />
+										<a href="#" class="top-btn delivery">Delivery</a>
+									</div>
+									<div class="right">
+										<img src="./assets/hero/bag.svg" />
+										<a href="#" class="top-btn pickup">Pickup</a>
+									</div>
 								</div>
 								<div class="bottom">
-									<input type="text" placeholder="Enter Your Address" />
+									<div class="input-field">
+										<img src="./assets/hero/location-marker.svg" />
+										<input type="text" placeholder="Enter Your Address" />
+									</div>
 									<div class="btn">
-										<img src="./assets/hero/search.svg" alt="" srcset="" />
+										<img src="./assets/hero/search.svg" />
 										<a href="#" class="bottom-btn">Find Food</a>
 									</div>
 								</div>
 							</div>
 						</div>
+						<!-- RIGHT OF THE WRAPPER -->
 						<img src="./assets/hero/Image.png" alt="" srcset="" />
 					</div>
 				</section>
