--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			</header>
 
 			<!-- OFFERS -->
-			<section class="offers"></section>
+			<section class="deals"></section>
 
 			<!-- HOW IT WORKS -->
 			<section class="works"></section>
