deals section has done

--- a/index.html
+++ b/index.html
@@ -78,10 +78,83 @@
 			</header>
 
 			<!-- OFFERS -->
-			<section class="deals"></section>
+			<section class="deals">
+				<div class="wrapper">
+					<ul class="deals__list">
+						<li class="deals__list--items">
+							<div class="top">
+								<img src="./assets/offers/offer-image1.png" alt="" srcset="" />
+								<div class="discount">
+									<h1 class="discount_price">15</h1>
+									<div class="discount-right">
+										<span class="discount_percent">%</span>
+										<span class="discount_off">off</span>
+									</div>
+								</div>
+							</div>
+							<div class="bottom">
+								<h2 class="items__text">Greys Vage</h2>
+								<p class="items__badge">6 Days Remaining</p>
+							</div>
+						</li>
+						<li class="deals__list--items">
+							<div class="top">
+								<img src="./assets/offers/offer-image2.png" alt="" srcset="" />
+								<div class="discount">
+									<h1 class="discount_price">10</h1>
+									<div class="discount-right">
+										<span class="discount_percent">%</span>
+										<span class="discount_off">off</span>
+									</div>
+								</div>
+							</div>
+							<div class="bottom">
+								<h2 class="items__text">Greys Vage</h2>
+								<p class="items__badge">6 Days Remaining</p>
+							</div>
+						</li>
+						<li class="deals__list--items">
+							<div class="top">
+								<img src="./assets/offers/offer-image3.png" alt="" srcset="" />
+								<div class="discount">
+									<h1 class="discount_price">25</h1>
+									<div class="discount-right">
+										<span class="discount_percent">%</span>
+										<span class="discount_off">off</span>
+									</div>
+								</div>
+							</div>
+							<div class="bottom">
+								<h2 class="items__text">Greys Vage</h2>
+								<p class="items__badge">6 Days Remaining</p>
+							</div>
+						</li>
+						<li class="deals__list--items">
+							<div class="top">
+								<img src="./assets/offers/offer-image4.png" alt="" srcset="" />
+								<div class="discount">
+									<h1 class="discount_price">20</h1>
+									<div class="discount-right">
+										<span class="discount_percent">%</span>
+										<span class="discount_off">off</span>
+									</div>
+								</div>
+							</div>
+							<div class="bottom">
+								<h2 class="items__text">Greys Vage</h2>
+								<p class="items__badge">6 Days Remaining</p>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</section>
 
 			<!-- HOW IT WORKS -->
-			<section class="works"></section>
+			<section class="works">
+				<div class="wrapper">
+					<h1>works</h1>
+				</div>
+			</section>
 
 			<!-- POPULAR ITEMS -->
 			<section class="popular"></section>
